--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ variables:
 #     - .npm/
 
 production_build:
-  image: node:12
+  image: node:16
   stage: build
   environment:
     name: production
@@ -34,16 +34,17 @@ production_build:
     - apt install -y git
     # Build, using the cache if available
     #- CI=false npm ci --cache .npm --prefer-offline
-    - CI=false npm ci --also=dev
-    - cd node_modules/@peermetrics/webrtc-stats && npm i --also=dev && npm run build && cd ../../..
-    - cd node_modules/@meetrix/webrtc-monitoring-common-lib/ && npm i --also=dev && npm run build && cd ../../..
+    #- CI=false npm ci --also=dev
+    - CI=false npm ci --include=dev
+    # - cd node_modules/@peermetrics/webrtc-stats && npm i --also=dev && npm run build && cd ../../..
+    # - cd node_modules/@meetrix/webrtc-monitoring-common-lib/ && npm i --also=dev && npm run build && cd ../../..
     - npm run build
   artifacts:
     paths:
       - dist
 
 production_publish:
-  image: node:12
+  image: node:16
   stage: deploy
   environment:
     name: production
@@ -108,7 +109,7 @@ production_deploy:
     - ssh $STAGING_SSH_USER@$STAGING_SSH_HOST "cd /var/www/lib-monitoring && ln -sfn releases/$CI_PIPELINE_ID current"
 
 branch_build:
-  image: node:12
+  image: node:16
   stage: build
   environment:
     name: staging
@@ -133,16 +134,17 @@ branch_build:
     - apt install -y git
     # Build, using the cache if available
     #- CI=false npm ci --cache .npm --prefer-offline
-    - CI=false npm ci --also=dev
-    - cd node_modules/@peermetrics/webrtc-stats && npm i --also=dev && npm run build && cd ../../..
-    - cd node_modules/@meetrix/webrtc-monitoring-common-lib/ && npm i --also=dev && npm run build && cd ../../..
+    #- CI=false npm ci --also=dev
+    - CI=false npm ci --include=dev
+    # - cd node_modules/@peermetrics/webrtc-stats && npm i --also=dev && npm run build && cd ../../..
+    # - cd node_modules/@meetrix/webrtc-monitoring-common-lib/ && npm i --also=dev && npm run build && cd ../../..
     - npm run build
   artifacts:
     paths:
       - dist
 
 branch_publish:
-  image: node:12
+  image: node:16
   stage: deploy
   environment:
     name: staging
